--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <header>
+      <div class="container">
       <nav>
         <a class="logo" href="./index.html"
           >Web<span class="logo-dark">Studio</span></a
@@ -51,164 +52,175 @@
           </li>
         </ul>
       </address>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">Order Service</button>
+        </div>
       </section>
       <section class="features">
-        <h2 class="features-title">Our Features</h2>
-        <ul class="features-list">
-          <li>
-            <h3 class="features-caption">Strategy</h3>
-            <p class="features-description">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-caption">Punctuality</h3>
-            <p class="features-description">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-caption">Diligence</h3>
-            <p class="features-description">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-caption">Technologies</h3>
-            <p class="features-description">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="features-title">Our Features</h2>
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="features-caption">Strategy</h3>
+              <p class="features-description">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-caption">Punctuality</h3>
+              <p class="features-description">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-caption">Diligence</h3>
+              <p class="features-description">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-caption">Technologies</h3>
+              <p class="features-description">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              src="./images/mark-guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/tom-ford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/camila-garcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/daniel-wilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                src="./images/mark-guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-position">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/tom-ford.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-position">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/camila-garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-position">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/daniel-wilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/img-1.jpg"
-              alt="image 1"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-caption">Banking App</h3>
-            <p class="portfolio-description">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-2.jpg"
-              alt="image 2"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-caption">Cashless Payment</h3>
-            <p class="portfolio-description">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-3.jpg"
-              alt="image 3"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-caption">Meditation App</h3>
-            <p class="portfolio-description">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-4.jpg"
-              alt="image 4"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-caption">Taxi Service</h3>
-            <p class="portfolio-description">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-5.jpg"
-              alt="image 5"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-caption">Screen Illustrations</h3>
-            <p class="portfolio-description">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-6.jpg"
-              alt="image 6"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-caption">Online Courses</h3>
-            <p class="portfolio-description">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/img-1.jpg"
+                alt="image 1"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-caption">Banking App</h3>
+              <p class="portfolio-description">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-2.jpg"
+                alt="image 2"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-caption">Cashless Payment</h3>
+              <p class="portfolio-description">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-3.jpg"
+                alt="image 3"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-caption">Meditation App</h3>
+              <p class="portfolio-description">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-4.jpg"
+                alt="image 4"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-caption">Taxi Service</h3>
+              <p class="portfolio-description">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-5.jpg"
+                alt="image 5"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-caption">Screen Illustrations</h3>
+              <p class="portfolio-description">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-6.jpg"
+                alt="image 6"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-caption">Online Courses</h3>
+              <p class="portfolio-description">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-light">Studio</span></a
-      >
-      <p class="footer-description">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-light">Studio</span></a
+        >
+        <p class="footer-description">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
