--- a/index.html
+++ b/index.html
@@ -22,36 +22,38 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header" id="header">
       <div class="container">
-      <nav>
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-dark">Studio</span></a
-        >
-        <ul>
-          <li>
-            <a class="menu" href="#">Studio</a>
-          </li>
-          <li>
-            <a class="menu" href="#">Portfolio</a>
-          </li>
-          <li>
-            <a class="menu" href="#">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li>
-            <a class="contacts" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+        <nav class="navy">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-dark">Studio</span></a
+          >
+          <ul class="menu-list">
+            <li>
+              <a class="menu" href="#">Studio</a>
+            </li>
+            <li>
+              <a class="menu" href="#">Portfolio</a>
+            </li>
+            <li>
+              <a class="menu" href="#">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="contacts-list">
+            <li>
+              <a class="contacts" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main>
@@ -61,9 +63,9 @@
           <button class="hero-button" type="button">Order Service</button>
         </div>
       </section>
-      <section class="features">
+      <section class="features section">
         <div class="container">
-          <h2 class="features-title">Our Features</h2>
+          <h2 class="visually-hidden">Our Features</h2>
           <ul class="features-list">
             <li class="features-item">
               <h3 class="features-caption">Strategy</h3>
@@ -96,7 +98,7 @@
           </ul>
         </div>
       </section>
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -143,69 +145,81 @@
           </ul>
         </div>
       </section>
-      <section class="portfolio">
+      <section class="portfolio section">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
-          <ul>
-            <li>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
               <img
                 src="./images/img-1.jpg"
                 alt="image 1"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-caption">Banking App</h3>
-              <p class="portfolio-description">App</p>
+              <div class="portfolio-wrapper">
+                <h3 class="portfolio-caption">Banking App</h3>
+                <p class="portfolio-description">App</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img-2.jpg"
                 alt="image 2"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-caption">Cashless Payment</h3>
-              <p class="portfolio-description">Marketing</p>
+              <div class="portfolio-wrapper">
+                <h3 class="portfolio-caption">Cashless Payment</h3>
+                <p class="portfolio-description">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img-3.jpg"
                 alt="image 3"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-caption">Meditation App</h3>
-              <p class="portfolio-description">App</p>
+              <div class="portfolio-wrapper">
+                <h3 class="portfolio-caption">Meditation App</h3>
+                <p class="portfolio-description">App</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img-4.jpg"
                 alt="image 4"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-caption">Taxi Service</h3>
-              <p class="portfolio-description">Marketing</p>
+              <div class="portfolio-wrapper">
+                <h3 class="portfolio-caption">Taxi Service</h3>
+                <p class="portfolio-description">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img-5.jpg"
                 alt="image 5"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-caption">Screen Illustrations</h3>
-              <p class="portfolio-description">Design</p>
+              <div class="portfolio-wrapper">
+                <h3 class="portfolio-caption">Screen Illustrations</h3>
+                <p class="portfolio-description">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img-6.jpg"
                 alt="image 6"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-caption">Online Courses</h3>
-              <p class="portfolio-description">Marketing</p>
+              <div class="portfolio-wrapper">
+                <h3 class="portfolio-caption">Online Courses</h3>
+                <p class="portfolio-description">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
